feat: payloads option in docs
